--- a/messages.xlf
+++ b/messages.xlf
@@ -2,19 +2,21 @@
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
   <file source-language="en-US" datatype="plaintext" original="ng2.template">
     <body>
-      <trans-unit id="5947023292411852232" datatype="html">
-        <source>Welcome to the Angular Core Deep Dive Course</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">9,11</context>
-        </context-group>
-      </trans-unit>
       <trans-unit id="5048677437444385397" datatype="html">
         <source>Edit Course</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">10,18</context>
+          <context context-type="linenumber">10,17</context>
         </context-group>
+      </trans-unit>
+      <trans-unit id="welcomeMessage" datatype="html">
+        <source>Welcome to the Angular Core Deep Dive Course</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/app.component.html</context>
+          <context context-type="linenumber">17,22</context>
+        </context-group>
+        <note priority="1" from="description">Greet the user at the beginning of the course.</note>
+        <note priority="1" from="meaning">welcome message.</note>
       </trans-unit>
     </body>
   </file>
