--- a/messages.xlf
+++ b/messages.xlf
@@ -6,14 +6,21 @@
         <source>Edit Course</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">10,17</context>
+          <context context-type="linenumber">10,12</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="7237794061041813530" datatype="html">
+        <source>{VAR_PLURAL, plural, =0 {No courses available.} =1 {One course is available.} other {A total of <x id="INTERPOLATION"/> courses are available.}}</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/app.component.html</context>
+          <context context-type="linenumber">12,21</context>
         </context-group>
       </trans-unit>
       <trans-unit id="welcomeMessage" datatype="html">
         <source>Welcome to the Angular Core Deep Dive Course</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">17,22</context>
+          <context context-type="linenumber">21,26</context>
         </context-group>
         <note priority="1" from="description">Greet the user at the beginning of the course.</note>
         <note priority="1" from="meaning">welcome message.</note>
