i18n alternative expressions support 82 of 113 completed

--- a/messages.xlf
+++ b/messages.xlf
@@ -20,10 +20,30 @@
         <source>Welcome to the Angular Core Deep Dive Course</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">21,26</context>
+          <context context-type="linenumber">21,29</context>
         </context-group>
         <note priority="1" from="description">Greet the user at the beginning of the course.</note>
         <note priority="1" from="meaning">welcome message.</note>
+      </trans-unit>
+      <trans-unit id="8856905278208146821" datatype="html">
+        <source> <x id="ICU" equiv-text="{
+      course.category,
+      select,
+      BEGINNER {Beginner}
+      INTERMEDIATE {Intermediate}
+      ADVANCED {Advanced}
+    }"/> </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/courses/course-card/course-card.component.html</context>
+          <context context-type="linenumber">19,25</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="4587612384756081379" datatype="html">
+        <source>{VAR_SELECT, select, BEGINNER {Beginner} INTERMEDIATE {Intermediate} ADVANCED {Advanced}}</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/courses/course-card/course-card.component.html</context>
+          <context context-type="linenumber">19,29</context>
+        </context-group>
       </trans-unit>
     </body>
   </file>
